Fix layout bugs: 1. main scroll bug 2. app bar fixed bug

--- a/src/style/5_components/_components.Board.scss
+++ b/src/style/5_components/_components.Board.scss
@@ -9,7 +9,7 @@
 
 	@include media-breakpoint-down(md) {
 		border-radius: 0;
-		margin: 0 -16px;
+		margin: 0 -#{$padding-container};
 	}
 	.mdc-list {
 		padding: 0;
