--- a/src/style/5_components/_components.MdcFab.scss
+++ b/src/style/5_components/_components.MdcFab.scss
@@ -6,4 +6,8 @@
 	padding: 24px 0 0;
 	position: sticky;
 	bottom: 0;
+
+	@include media-breakpoint-down(md) {
+		padding: 16px;
+	}
 }
