--- a/src/style/5_components/_components.Settings.scss
+++ b/src/style/5_components/_components.Settings.scss
@@ -10,8 +10,13 @@
 		box-shadow: $box-shadow-md;
 		transition: box-shadow .3s;
 		background-color: $c-bright;
+
 		&:hover {
 			box-shadow: $box-shadow-lg;
+		}
+
+		@include media-breakpoint-down(md) {
+			margin: 24px auto -#{$setting-avatar-width + 24px};
 		}
 
 		> input[type=file] {
@@ -44,7 +49,13 @@
 
 	&__profile-header {
 		height: $setting-avatar-width / 3;
-		border-radius: $border-radius-lg $border-radius-lg 0 0;
+
+		@include media-breakpoint-down(md) {
+			height: $setting-avatar-width + 48px;
+			background-image: url('/static/images/illustration/illu-mountains.jpg');
+			background-size: cover;
+			background-position: bottom;
+		}
 	}
 
 	&__board {
